--- a/shop_service/src/main/resources/application-prod.properties
+++ b/shop_service/src/main/resources/application-prod.properties
@@ -6,3 +6,4 @@ spring.datasource.username=root
 spring.datasource.password=ThePassword
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 server.servlet.context-path=/shop
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
