--- a/hall_planning_service/src/main/resources/application-dev.properties
+++ b/hall_planning_service/src/main/resources/application-dev.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/system_design
 
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=ThePassword
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.cloud.stream.bindings.planning_updated.destination=planningMade
