--- a/parking_service/src/main/resources/application-dev.properties
+++ b/parking_service/src/main/resources/application-dev.properties
@@ -4,3 +4,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/system_design
 spring.datasource.username=root
 spring.datasource.password=ThePassword
+
+host.name=localhost
+host.port=2300
