--- a/parking_service/src/main/resources/application-prod.properties
+++ b/parking_service/src/main/resources/application-prod.properties
@@ -4,3 +4,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://mysqldb:3306/system_design
 spring.datasource.username=root
 spring.datasource.password=ThePassword
+
+host.name=ticket-service
+host.port=2300
