--- a/hall_planning_service/src/main/resources/application-dev.properties
+++ b/hall_planning_service/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@ server.port=2223
 #spring.jpa.hibernate.ddl-auto=create-drop 
  #use after initial setup
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/system_design
+spring.datasource.url=jdbc:mysql://localhost:3306/HallPlanning
 
 spring.datasource.username=root
 spring.datasource.password=ThePassword
