--- a/parking_service/src/main/resources/application-prod.properties
+++ b/parking_service/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 server.port=2301
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://mysqldb:3306/system_design
+spring.datasource.url=jdbc:mysql://mysqldb:3306/Parking
 spring.datasource.username=root
 spring.datasource.password=ThePassword
 
