--- a/staff_service/src/main/resources/application.properties
+++ b/staff_service/src/main/resources/application.properties
@@ -1,10 +1,1 @@
-server.port=2224
-spring.jpa.hibernate.ddl-auto=update
-
-spring.data.cassandra.keyspace-name=staffservice_dev
-#spring.data.cassandra.schema-action=CREATE_IF_NOT_EXISTS
-spring.data.cassandra.contact-points=cassandra
-# BEAN FLAG
-populateCinemaRepository.enabled=true
-populateEmployeeRepository.enabled=true
-populateTimeSlotRepository.enabled=true
+spring.profiles.active=prod
