--- a/staff_service/src/main/resources/application-dev.properties
+++ b/staff_service/src/main/resources/application-dev.properties
@@ -1,10 +1,7 @@
-server.port=2224
+
 spring.jpa.hibernate.ddl-auto=update
 
 spring.data.cassandra.keyspace-name=staffservice_dev
-#spring.data.cassandra.schema-action=CREATE_IF_NOT_EXISTS
 spring.data.cassandra.contact-points=localhost
-# BEAN FLAG
-populateCinemaRepository.enabled=true
-populateEmployeeRepository.enabled=true
-populateTimeSlotRepository.enabled=true
+spring.data.cassandra.schema-action=CREATE_IF_NOT_EXISTS
+
