--- a/staff_service/src/main/resources/application.properties
+++ b/staff_service/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.profiles.active=dev
+spring.profiles.active=prod
+server.port=2224
+server.servlet.context-path=/staffservice
+# BEAN FLAG
+populateCinemaRepository.enabled=true
+populateEmployeeRepository.enabled=true
+populateTimeSlotRepository.enabled=true
