--- a/ticket_management_service/src/main/resources/application-dev.properties
+++ b/ticket_management_service/src/main/resources/application-dev.properties
@@ -1,14 +1,11 @@
 server.port=2300
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/system_design
+spring.datasource.url=jdbc:mysql://localhost:3306/Ticket
 spring.datasource.username=root
 spring.datasource.password=ThePassword
 
 server.servlet.context-path=/ticket
-
-spring.cloud.stream.bindings.ticket_sold.destination=soldTicket
-spring.cloud.stream.bindings.ticket_sold.content-type=plain/text
 
 spring.cloud.stream.bindings.planning_updated.destination=planningMade
 spring.cloud.stream.bindings.planning_updated.content-type=application/json
