--- a/publicity_service/src/main/resources/application-prod.properties
+++ b/publicity_service/src/main/resources/application-prod.properties
@@ -5,5 +5,9 @@ spring.datasource.url=jdbc:mysql://mysqldb:3306/Publicity
 spring.datasource.username=root
 spring.datasource.password=ThePassword
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+
 server.servlet.context-path=/publicity
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
