--- a/kubernetes/remote_version/frontend.yaml
+++ b/kubernetes/remote_version/frontend.yaml
@@ -13,6 +13,7 @@ spec:
     metadata:
       labels:
         app: frontend
+        chaos: immune
     spec:
       containers:
       - image: rgoussey/frontend:latest
