--- a/hall_planning_service/src/main/resources/application-dev.properties
+++ b/hall_planning_service/src/main/resources/application-dev.properties
@@ -22,4 +22,4 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.authentication-database=admin
 
 server.servlet.context-path=/planning
-publicity.url=publicity
+publicity.url=http://localhost:5555/publicity/publicity/maxDuration
