--- a/hall_planning_service/src/main/resources/application-prod.properties
+++ b/hall_planning_service/src/main/resources/application-prod.properties
@@ -21,4 +21,4 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.authentication-database = admin
 
 server.servlet.context-path=/planning
-publicity.url=publicity
+publicity.url=http://publicity:5555/publicity/publicity/maxDuration
