--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -30,6 +30,10 @@ spec:
         backend:
           serviceName: publicity
           servicePort: 5555
+      - path: /staffservice
+        backend:
+          serviceName: staff
+          servicePort: 2224
       - path: /
         backend:
           serviceName: frontend
